# learnchinese

./: LICENSE  README.md  build.sh  release.ps1
extension/: background.js  content.js  manifest.json  offscreen.html  popup.html  popup.js  rust_core.js  rust_core_bg.wasm
offscreen/: offscreen.html  offscreen.js
rust-core/: Cargo.toml
rust-core/src/: lib.rs
webapp/: package-lock.json  package.json
webapp/api/: views.js
webapp/src/: App.css  App.jsx  index.css
