[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# jieba-rs removed due to zstd compilation issues on wasm
# jieba-rs = { version = "0.7", default-features = false }
pinyin = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
